SBVTestSuite/TestSuite/THFailures/Files/SCase04.stderr
SCase04.hs:9:8: error: [GHC-39584]
    sCase: not usable in declaration context
  |
9 | [sCase|Expr e of
  |        ^^^^^^^^^...

